@@ -7006,7 +7006,7 @@
       <text>Hilfe</text>
     </string>
     <string>
-      <key>Label_InitiativeDice</key>
+      <key>String_InitiativeDice</key>
       <text>Initiativwürfel</text>
     </string>
     <string>
