@@ -255,7 +255,7 @@
       <text>Open</text>
     </string>
     <string>
-      <key>Label_InitiativeDice</key>
+      <key>String_InitiativeDice</key>
       <text>Initiative Dice</text>
     </string>
     <string>
