@@ -184,7 +184,7 @@
       <text>Ouvrir</text>
     </string>
     <string>
-      <key>Label_InitiativeDice</key>
+      <key>String_InitiativeDice</key>
       <text>Dés d'initiative</text>
     </string>
     <string>
