@@ -111,7 +111,7 @@
       <text>Abrir</text>
     </string>
     <string>
-      <key>Label_InitiativeDice</key>
+      <key>String_InitiativeDice</key>
       <text>Dados de Iniciativa</text>
     </string>
     <string>
