@@ -6866,7 +6866,7 @@
       <text>姓名</text>
     </string>
     <string>
-      <key>Label_InitiativeDice</key>
+      <key>String_InitiativeDice</key>
       <text>主动性骰</text>
     </string>
     <string>
